k8/tetris-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-deployment
  labels:
    app: tetris
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - name: tetris-container
        image: 842676011025.dkr.ecr.eu-north-1.amazonaws.com/tetris-js-app:latest
        ports:
        - containerPort: 80
