k8/tetris-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
  labels:
    app: tetris
spec:
  selector:
    app: tetris
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
